feat: Complete StoreInstruction implementation and tests.